aws-EKS-3/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx
  rules:

    - host: bc-test.fe-assignment.tk
      http: 
        paths:
          - backend:
              service:
                name: mock-server-service
                port:
                  number: 3005
            pathType: Prefix
            path: /
